- Adjust meteoroid spacing and separation values in `IWorldAlterationConfig` to improve world generation density. - Update biome blacklist in `meteoroidBiomeBlacklist` to exclude rivers and beaches. - Replace hardcoded salt values in `MixinRandomSpreadStructurePlacement` with updated configuration. - Refactor `CraterGenerator` to include water-filling logic for underwater impacts based on surrounding states and improve terrain clearing methods to limit above-impact clearing to radius bounds. - Minor formatting and readability improvements across the `CraterGenerator` logic.